@@ -33,7 +33,6 @@ import gconf
 
 import garmon
 from garmon import GLADE_DIR, debug
-from garmon.property_object import PropertyObject, gproperty, gsignal
 
 
 class PrefsDialog (gtk.Dialog):
@@ -68,34 +67,11 @@ class Preference(object):
         
                 
 
-class PreferenceManager(GObject, PropertyObject):
+class PreferenceManager(GObject):
     __gtype_name__ = 'PreferenceManager'
-
-    gproperty('mil_on_color', str, '#F7D30D', flags=gobject.PARAM_READABLE)
-    gproperty('mil_off_color', str, '#AAAAAA', flags=gobject.PARAM_READABLE)
-    
-    def prop_get_portname(self):
-        return self._portname
-        
-    def prop_get_unit_standard(self):
-        return self._unit_standard
-        
-    def prop_get_save_plugins(self):
-        return self._save_plugins
-        
-    def prop_get_start_plugins(self):
-        return self._start_plugins
-        
-    def prop_get_mil_on_color(self):
-        return self._mil_on_color
-        
-    def prop_get_mil_off_color(self):
-        return self._mil_off_color
-
 
     def __init__(self, base):
         GObject.__init__(self)
-        PropertyObject.__init__(self)
         
         self._gclient = gconf.client_get_default()
         self._gclient.add_dir (base, gconf.CLIENT_PRELOAD_NONE)
@@ -104,88 +80,11 @@ class PreferenceManager(GObject, PropertyObject):
         
         self._preferences = []
         self._listener_ids = []
-        
-        self._portname = '/dev/ttyUSB0'
-        self._unit_standard = 'Metric'
-        self._save_plugins = True
-        self._start_plugins = True
-        self._mil_on_color = '#F7D30D'
-        self._mil_off_color = '#AAAAAA'
-
-        self._gclient.notify_add ("/apps/garmon/port",
-                                        self._port_change_notify)
-        self._gclient.notify_add ("/apps/garmon/units",
-                                        self._units_change_notify)
-        self._gclient.notify_add ("/apps/garmon/save_plugins",
-                                        self._save_plugins_change_notify)
-        self._gclient.notify_add ("/apps/garmon/start_plugins",
-                                        self._start_plugins_change_notify)                
-        self._gclient.notify_add ("/apps/garmon/mil_on_color",
-                                        self._mil_on_color_notify)
-        self._gclient.notify_add ("/apps/garmon/mil_off_color",
-                                        self._mil_off_color_notify)
                                         
         self._dialog = PrefsDialog()
 
-    def __post_init__(self):
-        self._gclient.notify("/apps/garmon/port")
-        self._gclient.notify("/apps/garmon/units")
-        self._gclient.notify("/apps/garmon/save_plugins")
-        self._gclient.notify("/apps/garmon/start_plugins")
-        self._gclient.notify("/apps/garmon/mil_on_color")
-        self._gclient.notify("/apps/garmon/mil_off_color")
-        
-        
-        #FOR TESTING
-        
-        self.register_preference('mil.on-color', str, '#F7D30D')
-        self.register_preference('mil.off-color', str, '#AAAAAA')
-        self.register_preference('port', str, '/dev/ttyUSB0')
-        self.register_preference('metric', bool, True)
-        self.register_preference('imperial', bool, False)
-        self.register_preference('plugins.save', bool, True)
-        self.register_preference('plugins.start', bool, True)
-        self.register_preference('plugins.saved', str, '')
-        
-        fname = os.path.join(GLADE_DIR, 'prefs.glade')
-        xml = gtk.glade.XML(fname, 'new_prefs_vbox', 'garmon')
-        self.add_dialog_page(xml, 'new_prefs_vbox', 'General')
 
 
-
-    def _mil_on_color_notify(self, gclient, cnxn_id, entry, args):
-        if entry.value and entry.value.type == gconf.VALUE_STRING:
-            value = entry.value.get_string()
-        else:
-            value = '#F7D30D'
-        try:
-            gtk.gdk.color_parse(value)
-        except ValueError:
-            debug('We got an invalid colorspec from gconf for mil_on_color')
-            value = '#F7D30D'
-        old = self._mil_on_color
-        self._mil_on_color = value
-        if old != self._mil_on_color:
-            self.notify('mil_on_color')
-        
-            
-            
-    def _mil_off_color_notify(self, gclient, cnxn_id, entry, args):
-        if entry.value and entry.value.type == gconf.VALUE_STRING:
-            value = entry.value.get_string()
-        else:
-            value = '#AAAAAA'
-        try:
-            gtk.gdk.color_parse(value)
-        except ValueError:
-            debug('We got an invalid colorspec from gconf for mil_on_color')
-            value = '#AAAAAA'
-        old = self._mil_off_color
-        self._mil_off_color = value
-        if old != self._mil_off_color:
-            self.notify('mil-off-color')
-                    
-                    
     def _port_change_notify(self, gclient, cnxn_id, entry, args):
         old = self._portname
         if (not entry.value) or (entry.value.type != gconf.VALUE_STRING):
@@ -195,32 +94,6 @@ class PreferenceManager(GObject, PropertyObject):
         if old != self._portname:
             self.notify('portname')
             
-
-    def _units_change_notify(self, gclient, cnxn_id, entry, args):
-        old = self._unit_standard
-        if (not entry.value) or (entry.value.type != gconf.VALUE_STRING):
-            units = 'Metric'
-        else:
-            units = entry.value.get_string()
-        self._unit_standard = units
-        if old != self._unit_standard:
-            self.notify('unit_standard')
-
-                
-
-    def _save_plugins_change_notify(self, gclient, cnxn_id, entry, args):
-        old = self._save_plugins
-        self._save_plugins = entry.value.get_bool()
-        if old != self._save_plugins:
-            self.notify('save_plugins')
-
-
-    def _start_plugins_change_notify(self, gclient, cnxn_id, entry, args):
-        old = self._start_plugins
-        self._start_plugins = entry.value.get_bool()
-        if old != self._start_plugins:
-            self.notify('start_plugins')
-
 
     def _gconf_key_change_notify(self, gclient, cnxn_id, entry, pref):
         if entry.value.type == gconf.VALUE_STRING:
@@ -238,6 +111,39 @@ class PreferenceManager(GObject, PropertyObject):
             cb(pref.name, pref.value, pref.ptype, args)
   
 
+    def _pref_notify_cb(self, pname, pvalue, ptype, args):
+        widget = args[0]
+        if ptype is str:
+            if hasattr(widget, 'set_text'):
+                widget.set_text(pvalue)
+            elif hasattr(widget, 'set_color'):
+                widget.set_color(gtk.gdk.color_parse(pvalue))
+            else:
+                #FIXME: error handling
+                pass
+        elif ptype is bool:
+            if isinstance(widget, gtk.ToggleButton):
+                widget.set_active(pvalue)
+            else:
+                #FIXME: error handling
+                pass
+            
+              
+    def _toggle_widget_cb(self, toggle, pname):
+        active = toggle.get_active()
+        self.set_preference(pname, active)
+        
+        
+    def _text_widget_cb(self, widget, pname):
+        value = widget.get_text()
+        self.set_preference(pname, value)
+        
+        
+    def _color_widget_cb(self, widget, pname):
+        value = widget.get_color().to_string()
+        self.set_preference(pname, value)
+        
+        
     def preference_notify(self, pname):
         for pref in self._preferences:
             if pref.name == pname:
@@ -376,40 +282,8 @@ class PreferenceManager(GObject, PropertyObject):
             top.cb_ids.append(cb_id)
             self.preference_notify(pname)
             
-            
-            
-    def _pref_notify_cb(self, pname, pvalue, ptype, args):
-        widget = args[0]
-        if ptype is str:
-            if hasattr(widget, 'set_text'):
-                widget.set_text(pvalue)
-            elif hasattr(widget, 'set_color'):
-                print pvalue
-                widget.set_color(gtk.gdk.color_parse(pvalue))
-            else:
-                #FIXME: error handling
-                print 'error'
-        elif ptype is bool:
-            if isinstance(widget, gtk.ToggleButton):
-                widget.set_active(pvalue)
-            else:
-                #FIXME: error handling
-                pass
-            
-              
-    def _toggle_widget_cb(self, toggle, pname):
-        active = toggle.get_active()
-        self.set_preference(pname, active)
         
-        
-    def _text_widget_cb(self, widget, pname):
-        value = widget.get_text()
-        self.set_preference(pname, value)
-        
-        
-    def _color_widget_cb(self, widget, pname):
-        value = widget.get_color().to_string()
-        self.set_preference(pname, value)
+
         
         
     
